multiswap support added
