# go/model_multi_swap.go
@@ -1,0 +1,17 @@
+/*
+ * Arth-Arbitrage
+ *
+ * Arth Arbitrage API
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package restapi
+
+type MultiSwap struct {
+
+	Lender int64 `json:"lender,omitempty"`
+
+	Swaps []Swap `json:"swaps,omitempty"`
+}
